--- a/RoboTech/appsettings.json
+++ b/RoboTech/appsettings.json
@@ -1,4 +1,7 @@
 {
+  "ConnectionStrings": {
+    "RoboTech": "Server=ELONMUSK;Database=shoplaptop;Trusted_Connection=True;MultipleActiveResultSets=true"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
