--- a/RoboTech/appsettings.json
+++ b/RoboTech/appsettings.json
@@ -1,10 +1,13 @@
 {
-  
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "WebShopConnectionString": "Server=ELONMUSK;Database=shoplaptop;Trusted_Connection=True;MultipleActiveResultSets=true"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "Microsoft.NETCore.Portable.Compatibility": "1.0.1-rc2-24027"
 }
