--- a/RoboTech/RoboTech.csproj
+++ b/RoboTech/RoboTech.csproj
@@ -14,6 +14,22 @@
   </ItemGroup>
 
   <ItemGroup>
+    <Compile Remove="Models\TbAbout.cs" />
+    <Compile Remove="Models\TbConfig.cs" />
+    <Compile Remove="Models\TbContact.cs" />
+    <Compile Remove="Models\TbInvoice.cs" />
+    <Compile Remove="Models\TbInvoiceDetail.cs" />
+    <Compile Remove="Models\TbMenu.cs" />
+    <Compile Remove="Models\TbPost.cs" />
+    <Compile Remove="Models\TbPostCategory.cs" />
+    <Compile Remove="Models\TbPostComment.cs" />
+    <Compile Remove="Models\TbPostTag.cs" />
+    <Compile Remove="Models\TbProductComment.cs" />
+    <Compile Remove="Models\TbSupplier.cs" />
+    <Compile Remove="Models\TbTag.cs" />
+  </ItemGroup>
+
+  <ItemGroup>
     <PackageReference Include="AspNetCoreHero.ToastNotification" Version="1.1.0" />
     <PackageReference Include="Microsoft.AspNetCore.Authentication" Version="2.2.0" />
     <PackageReference Include="Microsoft.AspNetCore.Http" Version="2.2.2" />
