Re-scaffold database

--- a/RoboTech/appsettings.json
+++ b/RoboTech/appsettings.json
@@ -1,7 +1,7 @@
 {
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "WebShopConnectionString": "Server=ELONMUSK;Database=shoplaptop;Trusted_Connection=True;MultipleActiveResultSets=true"
+    "RobotechConnectionString": "Server=127.0.0.1:1443;Database=Robotech;User Id=sqlserver;Password=robotech2022;Trusted_Connection=True;MultipleActiveResultSets=true"
   },
   "Logging": {
     "LogLevel": {
