Try to Export img from db, edit some transition and background color, add connection string and rescaffold database

--- a/RoboTech/appsettings.json
+++ b/RoboTech/appsettings.json
@@ -1,12 +1,14 @@
 {
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "RobotechConnectionString": "Server=127.0.0.1:1443;Database=Robotech;User Id=sqlserver;Password=robotech2022;Trusted_Connection=True;MultipleActiveResultSets=true"
+    "RobotechConnectionString": "Server=NHANNA\\SQLEXPRESS;Database=Robotech;Integrated Security=true;Trusted_Connection=True;MultipleActiveResultSets=true"
   },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
-      "Microsoft.AspNetCore": "Warning"
+      "Microsoft.AspNetCore": "Warning",
+      "Microsoft.EntityFrameworkCore.Query": "Information",
+      "Microsoft.EntityFrameworkCore.Database.Command": "Information"
     }
   }
 }
