--- a/RoboTech/Properties/launchSettings.json
+++ b/RoboTech/Properties/launchSettings.json
@@ -25,6 +25,15 @@
         "ASPNETCORE_URLS": "https://localhost:7148;http://localhost:5148"
       },
       "distributionName": ""
+    },
+    "Profile 1": {
+      "commandName": "Project",
+      "launchBrowser": true,
+      "environmentVariables": {
+        "ASPNETCORE_ENVIRONMENT": "Development"
+      },
+      "dotnetRunMessages": true,
+      "applicationUrl": "https://localhost:7148;http://localhost:5148"
     }
   },
   "iisSettings": {
