--- a/RoboTech/appsettings.json
+++ b/RoboTech/appsettings.json
@@ -1,7 +1,7 @@
 {
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "RobotechConnectionString": "Server=ELONMUSK;Database=shoplaptop;Integrated Security=true;Trusted_Connection=True;MultipleActiveResultSets=true"
+    "RobotechConnectionString": "Server=ELONMUSK;Database=shoplaptop;Integrated Security=true;Trusted_Connection=True;MultipleActiveResultSets=true;TrustServerCertificate=True"
   },
   "Logging": {
     "LogLevel": {
