--- a/RoboTech/RoboTech.csproj
+++ b/RoboTech/RoboTech.csproj
@@ -51,6 +51,7 @@
   <ItemGroup>
     <Folder Include="Areas\Admin\Data\" />
     <Folder Include="Areas\Admin\Models\" />
+    <Folder Include="Database\" />
     <Folder Include="wwwroot\database\" />
   </ItemGroup>
 
